# halo2-ops

./: Cargo.toml
src/: bit_check.rs  canonicity.rs  lib.rs  utilities.rs
src/utilities/: decompose_running_sum.rs
